Fix bug in RATableView where table body content would get collapsed if set to not scroll vertically

--- a/src/Orbital7.RapidApp/wwwroot/rapidapp.css
+++ b/src/Orbital7.RapidApp/wwwroot/rapidapp.css
@@ -78,6 +78,10 @@
     align-self: flex-start;
 }
 
+.ra-flex-nocollapse {
+    flex-shrink: 0;
+}
+
 .ra-scrollable-x {
     overflow-x: auto;
 }
